# ai-sales-analytics

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
config/: schema_mapping.alina_v2_new.yaml  schema_mapping.example.yaml
docs/: INTEGRATION_AI_SALLER_ALINA_V2_NEW.md
scripts/: demo_seed.sql  seed_alina_v2_new.py  seed_weekly_realistic.py
src/ai_sales_analytics/: __init__.py  bootstrap.py  cli.py  config.py  localization.py  logging_config.py  main.py  time_utils.py
src/ai_sales_analytics.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/ai_sales_analytics/analytics/: dialog_review.py  models.py  orchestrator.py  pipeline.py  rules.py  utils.py
src/ai_sales_analytics/analytics/insights/: heuristic.py  llm.py
src/ai_sales_analytics/analytics/metrics/: funnel.py  intents.py  operational.py  overall.py  quality.py
src/ai_sales_analytics/api/: routes.py
src/ai_sales_analytics/db/: contracts.py  engine.py  repository.py  schema_mapping.py
src/ai_sales_analytics/reporting/: report_writer.py  summary.py  telegram.py
src/ai_sales_analytics/scheduler/: jobs.py
src/ai_sales_analytics/templates/: daily_report.html
src/ai_sales_analytics/visualization/: charts.py
tests/: test_dialog_review.py  test_funnel_metrics.py  test_operational_metrics.py  test_overall_metrics.py  test_quality_metrics.py
